--- a/index.html
+++ b/index.html
@@ -160,13 +160,11 @@
 <body>
 <div id="overlay" class="overlay">
 <div class="overlay-body">
-<p class="overlay-title">Cookies и сторонний контент</p>
-<p class="overlay-description">Этот сайт использует cookies что-бы собирать информацию об ошибках
-чтобы улучшить сайт и исправить ошибки. Приймите cookies для хорошей
-оптимальной производительности.</p>
+<p class="overlay-title">Cookies Term's and Services </p>
+<p class="overlay-description">This website uses cookies to improve your experience. We’ll assume you’re ok with this, but you can opt out if you wish.</p>
 <div class="overlay-buttons-wrapper">
-<div id="accept-button" class="overlay-button">Принять</div>
-<div id="decline-button" class="overlay-button">Отклонить</div>
+<div id="accept-button" class="overlay-button">Accept</div>
+<div id="decline-button" class="overlay-button">Decline</div>
 </div>
 <a href="https://t.me/aizen_softs" target="_blank" class="overlay-link">Пользовательское соглашение</a>
 </div>
