--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta property="og:title" content="Free Download"> 
 <meta property="og:site_name" content="Free Download">
 <meta property="og:image" content="images/Parad1st.png">
-<meta property="og:description" content="Free Download By Parad1st - скачать абсолютно бесплатно!"> 
+<meta property="og:description" content="Check out my project"> 
 <meta property="og:type" content="website">
 <meta name="twitter:card" content="photo">
 <meta name="twitter:title" content="Programm">
@@ -166,7 +166,7 @@
 <div id="accept-button" class="overlay-button">Accept</div>
 <div id="decline-button" class="overlay-button">Decline</div>
 </div>
-<a href="https://t.me/aizen_softs" target="_blank" class="overlay-link">Пользовательское соглашение</a>
+<a href="https://t.me/aizen_softs" target="_blank" class="overlay-link">We are using to improve the website</a>
 </div>
 </div>
 <div class="scare">
