--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 <div id="accept-button" class="overlay-button">Accept</div>
 <div id="decline-button" class="overlay-button">Decline</div>
 </div>
-<a href="https://t.me/aizen_softs" target="_blank" class="overlay-link">We are using to improve the website</a>
+<a href="#" target="_blank" class="overlay-link">We are using to improve the website</a>
 </div>
 </div>
 <div class="scare">
